# kompy

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  test.s  test.src
src/kompy/: ast.py  compiler.py  ir.py  jvm.py  lexer.py  main.py  parser.py  riscv.py  run.py  typecheck.py  typechecker.py
src/wuwiak/: .dir-locals.el  Pipfile  __main__.py  ast.py  compiler_riscv.py  error.py  jvm.py  lexer.py  parser.py  riscv.py  test_comp.py  typechecker.py
tests/: test_runner.py
tests/bad/: 01_missing_semicolon.src  02_missing_brace.src  03_missing_parens.src  04_keyword_as_var.src  05_invalid_identifier.src  06_undefined_var.src  07_undefined_func.src  08_type_mismatch.src  09_wrong_args.src  10_return_type.src  11_missing_return.src  13_invalid_comparison.src  14_unclosed_string.src  15_invalid_escape.src  17_missing_body.src  18_invalid_operator.src  20_func_redefinition.src  21_missing_assignment.src  22_missing_comma.src  23_missing_condition.src  24_invalid_char.src  25_missing_type.src
tests/good/: 01_simple_int.src  02_simple_bool.src  03_simple_bool_false.src  04_simple_string.src  05_string_escapes.src  06_arithmetic.src  07_div_mod.src  08_comparison.src  09_equality.src  10_logical.src  11_parentheses.src  12_var_init.src  12_variables.src  13_var_no_init.src  14_assignment.src  15_if_true.src  16_if_false.src  17_if_else.src  18_nested_if.src  19_multiple_statements.src  20_function_call.src  21_function_args.src  22_multiple_functions.src  23_recursion.src  24_bool_vars.src  25_string_vars.src  26_expr_statement.src  27_negative_numbers.src  (+8 more)
