[project]
name = "wuwiak"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "attrs>=25.3.0",
  "parsy>=2.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]


[project.scripts]
wuwiakc = "wuwiak.__main__:main"
